--- a/Analysis/Improved_FD_points.ipynb
+++ b/Analysis/Improved_FD_points.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,15 +23,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Starting gameweek\n",
-    "week = 6\n",
+    "week = 8\n",
     "\n",
     "# Current gameweek \n",
-    "gameweek = 16"
+    "gameweek = 19"
    ]
   },
   {
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
     "player_data = pd.concat(all_player_sep, axis=0, ignore_index=True)\n",
     "\n",
     "# Drop unnamed column\n",
-    "player_data = player_data.drop(columns = ['Unnamed: 0'])\n",
+    "#player_data = player_data.drop(columns = ['Unnamed: 0'])\n",
     "\n",
     "# Remove players who play less than 61 minutes in a game (i.e. they do not recieve their 2 points minimum for playoing this amount)\n",
     "player_data = player_data[player_data['Minutes'] > 60].copy()"
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -128,98 +128,98 @@
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>6</td>\n",
-       "      <td>164</td>\n",
+       "      <td>207</td>\n",
        "      <td>2</td>\n",
        "      <td>5</td>\n",
-       "      <td>2</td>\n",
-       "      <td>7</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>...</td>\n",
-       "      <td>3</td>\n",
-       "      <td>9</td>\n",
+       "      <td>11</td>\n",
        "      <td>4</td>\n",
-       "      <td>13</td>\n",
-       "      <td>0</td>\n",
-       "      <td>6</td>\n",
-       "      <td>5</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2</td>\n",
        "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>5</td>\n",
+       "      <td>18</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>8</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>7</td>\n",
-       "      <td>82</td>\n",
-       "      <td>3</td>\n",
+       "      <td>93</td>\n",
        "      <td>2</td>\n",
-       "      <td>1</td>\n",
        "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "      <td>2</td>\n",
-       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
        "      <td>...</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>2</td>\n",
+       "      <td>4</td>\n",
        "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
        "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>7</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>8</td>\n",
-       "      <td>66</td>\n",
+       "      <td>76</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
-       "      <td>3</td>\n",
+       "      <td>4</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "      <td>...</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
+       "      <td>4</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>9</td>\n",
-       "      <td>65</td>\n",
+       "      <td>77</td>\n",
        "      <td>0</td>\n",
        "      <td>3</td>\n",
-       "      <td>2</td>\n",
+       "      <td>3</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
@@ -228,22 +228,22 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>...</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -252,30 +252,30 @@
       ],
       "text/plain": [
        "    GW Points  Total  ARS (A)  ARS (H)  AVL (A)  AVL (H)  BHA (A)  BHA (H)  \\\n",
-       "10          6    164        2        5        2        7        2        1   \n",
-       "11          7     82        3        2        1        4        1        0   \n",
-       "12          8     66        1        2        1        3        0        0   \n",
-       "13          9     65        0        3        2        2        2        3   \n",
-       "14         10     29        1        0        0        0        1        0   \n",
+       "10          6    207        2        5        0       11        4        2   \n",
+       "11          7     93        2        4        2        4        0        0   \n",
+       "12          8     76        1        2        1        4        0        0   \n",
+       "13          9     77        0        3        3        2        2        3   \n",
+       "14         10     29        1        0        0        1        0        0   \n",
        "\n",
        "    BOU (A)  BOU (H)  ...  NFO (A)  NFO (H)  SOU (A)  SOU (H)  TOT (A)  \\\n",
-       "10        0        3  ...        3        9        4       13        0   \n",
-       "11        2        3  ...        1        2        3        4        0   \n",
-       "12        0        1  ...        1        3        2        3        1   \n",
-       "13        1        0  ...        1        1        2        2        3   \n",
-       "14        1        1  ...        1        1        1        2        0   \n",
+       "10        3        0  ...        1        8        5       18        1   \n",
+       "11        4        2  ...        0        2        4        3        2   \n",
+       "12        0        2  ...        0        3        4        2        1   \n",
+       "13        1        1  ...        0        1        3        1        3   \n",
+       "14        1        0  ...        1        0        1        3        1   \n",
        "\n",
        "    TOT (H)  WHU (A)  WHU (H)  WOL (A)  WOL (H)  \n",
-       "10        6        5        6        0        3  \n",
-       "11        2        0        1        4        7  \n",
-       "12        5        2        1        1        1  \n",
-       "13        0        0        3        1        2  \n",
-       "14        0        1        2        2        2  \n",
+       "10       10        8        5        0        4  \n",
+       "11        1        0        1        3        5  \n",
+       "12        6        2        1        0        0  \n",
+       "13        0        1        2        1        3  \n",
+       "14        0        1        2        1        0  \n",
        "\n",
        "[5 rows x 42 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
