--- a/Models/Notebooks/Model_2.1.ipynb
+++ b/Models/Notebooks/Model_2.1.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,12 +34,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Current gameweek \n",
-    "gameweek = 18"
+    "gameweek = 20"
    ]
   },
   {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
     "\n",
     "# Map difficulty for NGWs (next gameweeks) using Team and Position\n",
     "for i in range(1, 6):  # NGW1 to NGW5\n",
-    "    player_data[f'NGW{i}'] = player_data.apply(lambda row: mapping.get((row.iloc[32 + i], row.iloc[4]), None), axis=1)"
+    "    player_data[f'NGW{i}'] = player_data.apply(lambda row: mapping.get((row.iloc[33 + i], row.iloc[4]), None), axis=1)"
    ]
   },
   {
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,377 +294,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Player ID</th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Last_Name</th>\n",
-       "      <th>Team</th>\n",
-       "      <th>Position</th>\n",
-       "      <th>Cost_Today</th>\n",
-       "      <th>GW Points</th>\n",
-       "      <th>Minutes</th>\n",
-       "      <th>xG</th>\n",
-       "      <th>Gameweek</th>\n",
-       "      <th>...</th>\n",
-       "      <th>GW22</th>\n",
-       "      <th>GW23</th>\n",
-       "      <th>NGW1</th>\n",
-       "      <th>NGW2</th>\n",
-       "      <th>NGW3</th>\n",
-       "      <th>NGW4</th>\n",
-       "      <th>NGW5</th>\n",
-       "      <th>Week</th>\n",
-       "      <th>Team_gls_against</th>\n",
-       "      <th>TeamxG_against</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Fábio</td>\n",
-       "      <td>Fábio Vieira</td>\n",
-       "      <td>Arsenal</td>\n",
-       "      <td>MID</td>\n",
-       "      <td>55</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>...</td>\n",
-       "      <td>AVL (H)</td>\n",
-       "      <td>WOL (A)</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Fábio</td>\n",
-       "      <td>Fábio Vieira</td>\n",
-       "      <td>Arsenal</td>\n",
-       "      <td>MID</td>\n",
-       "      <td>54</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>...</td>\n",
-       "      <td>AVL (H)</td>\n",
-       "      <td>WOL (A)</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Fábio</td>\n",
-       "      <td>Fábio Vieira</td>\n",
-       "      <td>Arsenal</td>\n",
-       "      <td>MID</td>\n",
-       "      <td>54</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>...</td>\n",
-       "      <td>AVL (H)</td>\n",
-       "      <td>WOL (A)</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Fábio</td>\n",
-       "      <td>Fábio Vieira</td>\n",
-       "      <td>Arsenal</td>\n",
-       "      <td>MID</td>\n",
-       "      <td>54</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>...</td>\n",
-       "      <td>AVL (H)</td>\n",
-       "      <td>WOL (A)</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Fábio</td>\n",
-       "      <td>Fábio Vieira</td>\n",
-       "      <td>Arsenal</td>\n",
-       "      <td>MID</td>\n",
-       "      <td>54</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>6</td>\n",
-       "      <td>...</td>\n",
-       "      <td>AVL (H)</td>\n",
-       "      <td>WOL (A)</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>6</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11895</th>\n",
-       "      <td>691</td>\n",
-       "      <td>Godwill</td>\n",
-       "      <td>Kukonki</td>\n",
-       "      <td>Man Utd</td>\n",
-       "      <td>DEF</td>\n",
-       "      <td>40</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>18</td>\n",
-       "      <td>...</td>\n",
-       "      <td>BHA (H)</td>\n",
-       "      <td>FUL (A)</td>\n",
-       "      <td>3</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>18</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.80</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11896</th>\n",
-       "      <td>692</td>\n",
-       "      <td>Amara</td>\n",
-       "      <td>Nallo</td>\n",
-       "      <td>Liverpool</td>\n",
-       "      <td>DEF</td>\n",
-       "      <td>40</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>17</td>\n",
-       "      <td>...</td>\n",
-       "      <td>BRE (A)</td>\n",
-       "      <td>IPS (H)</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2</td>\n",
-       "      <td>17</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11897</th>\n",
-       "      <td>692</td>\n",
-       "      <td>Amara</td>\n",
-       "      <td>Nallo</td>\n",
-       "      <td>Liverpool</td>\n",
-       "      <td>DEF</td>\n",
-       "      <td>40</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>18</td>\n",
-       "      <td>...</td>\n",
-       "      <td>BRE (A)</td>\n",
-       "      <td>IPS (H)</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2</td>\n",
-       "      <td>18</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11898</th>\n",
-       "      <td>693</td>\n",
-       "      <td>Joseph</td>\n",
-       "      <td>O'Brien-Whitmarsh</td>\n",
-       "      <td>Southampton</td>\n",
-       "      <td>MID</td>\n",
-       "      <td>45</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>17</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NFO (A)</td>\n",
-       "      <td>NEW (H)</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "      <td>17</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.80</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11899</th>\n",
-       "      <td>693</td>\n",
-       "      <td>Joseph</td>\n",
-       "      <td>O'Brien-Whitmarsh</td>\n",
-       "      <td>Southampton</td>\n",
-       "      <td>MID</td>\n",
-       "      <td>45</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>18</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NFO (A)</td>\n",
-       "      <td>NEW (H)</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "      <td>18</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.80</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>11900 rows × 23 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       Player ID     Name          Last_Name         Team Position  \\\n",
-       "0              1    Fábio       Fábio Vieira      Arsenal      MID   \n",
-       "1              1    Fábio       Fábio Vieira      Arsenal      MID   \n",
-       "2              1    Fábio       Fábio Vieira      Arsenal      MID   \n",
-       "3              1    Fábio       Fábio Vieira      Arsenal      MID   \n",
-       "4              1    Fábio       Fábio Vieira      Arsenal      MID   \n",
-       "...          ...      ...                ...          ...      ...   \n",
-       "11895        691  Godwill            Kukonki      Man Utd      DEF   \n",
-       "11896        692    Amara              Nallo    Liverpool      DEF   \n",
-       "11897        692    Amara              Nallo    Liverpool      DEF   \n",
-       "11898        693   Joseph  O'Brien-Whitmarsh  Southampton      MID   \n",
-       "11899        693   Joseph  O'Brien-Whitmarsh  Southampton      MID   \n",
-       "\n",
-       "       Cost_Today  GW Points  Minutes   xG  Gameweek  ...     GW22     GW23  \\\n",
-       "0              55          0        0  0.0         2  ...  AVL (H)  WOL (A)   \n",
-       "1              54          0        0  0.0         3  ...  AVL (H)  WOL (A)   \n",
-       "2              54          0        0  0.0         4  ...  AVL (H)  WOL (A)   \n",
-       "3              54          0        0  0.0         5  ...  AVL (H)  WOL (A)   \n",
-       "4              54          0        0  0.0         6  ...  AVL (H)  WOL (A)   \n",
-       "...           ...        ...      ...  ...       ...  ...      ...      ...   \n",
-       "11895          40          0        0  0.0        18  ...  BHA (H)  FUL (A)   \n",
-       "11896          40          0        0  0.0        17  ...  BRE (A)  IPS (H)   \n",
-       "11897          40          0        0  0.0        18  ...  BRE (A)  IPS (H)   \n",
-       "11898          45          0        0  0.0        17  ...  NFO (A)  NEW (H)   \n",
-       "11899          45          0        0  0.0        18  ...  NFO (A)  NEW (H)   \n",
-       "\n",
-       "      NGW1 NGW2 NGW3  NGW4  NGW5  Week  Team_gls_against  TeamxG_against  \n",
-       "0        2    3    4     2     2     2               1.0            1.13  \n",
-       "1        2    3    4     2     2     3               1.0            1.13  \n",
-       "2        2    3    4     2     2     4               1.0            1.13  \n",
-       "3        2    3    4     2     2     5               1.0            1.13  \n",
-       "4        2    3    4     2     2     6               1.0            1.13  \n",
-       "...    ...  ...  ...   ...   ...   ...               ...             ...  \n",
-       "11895    3    5    2     3     3    18               2.0            0.80  \n",
-       "11896    3    2    4     5     2    17               3.0            1.30  \n",
-       "11897    3    2    4     5     2    18               1.0            0.30  \n",
-       "11898    4    2    3     4     3    17               0.0            0.80  \n",
-       "11899    4    2    3     4     3    18               1.0            1.80  \n",
-       "\n",
-       "[11900 rows x 23 columns]"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "player_data"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -674,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -751,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -785,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -816,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -838,13 +467,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Filter on columns\n",
     "columns = ['Player ID', 'Name', 'Last_Name', 'Team', 'Position', 'Cost_Today', \n",
-    "           'Minutes', 'Gameweek','Form_player_xG_norm','Form_TeamxG_against_norm', 'FDI_1',\n",
+    "           'Minutes', 'Gameweek', 'Avail','Form_player_xG_norm','Form_TeamxG_against_norm', 'FDI_1',\n",
     "       'FDI_2', 'FDI_3', 'FDI_4', 'FDI_5']\n",
     "\n",
     "# Filter on columns\n",
@@ -853,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -873,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -894,27 +523,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "          Name       Team Position   FD_Index  Price\n",
-      "0     A.Becker  Liverpool       GK  19.958159     54\n",
-      "1        Gomez  Liverpool      DEF  19.958159     49\n",
-      "2      M.Salah  Liverpool      MID  70.621302    135\n",
-      "3         Isak  Newcastle      FWD  67.083333     90\n",
-      "4     J.Murphy  Newcastle      MID  40.911489     50\n",
-      "5   Kulusevski      Spurs      MID  37.518068     64\n",
-      "6      Havertz    Arsenal      FWD  52.789166     79\n",
-      "7      Solanke      Spurs      FWD  44.400888     75\n",
-      "8       Palmer    Chelsea      MID  62.664307    113\n",
-      "9      Coleman    Everton      DEF  16.448276     43\n",
-      "10   Mykolenko    Everton      DEF  16.448276     43\n",
-      "Total Team Cost: 795\n",
-      "Total Team Index 448.80142282932286\n"
+      "         Name            Team Position   FD_Index  Price\n",
+      "0     G.Jesus         Arsenal      FWD  38.403846     68\n",
+      "1   Luis Díaz       Liverpool      MID  37.675666     75\n",
+      "2     M.Salah       Liverpool      MID  79.073595    136\n",
+      "3        Burn       Newcastle      DEF  21.880734     44\n",
+      "4    Dúbravka       Newcastle       GK  21.880734     42\n",
+      "5        Isak       Newcastle      FWD  74.152050     91\n",
+      "6   Calafiori         Arsenal      DEF  22.186047     58\n",
+      "7      I.Sarr  Crystal Palace      MID  40.754438     59\n",
+      "8    J.Timber         Arsenal      DEF  22.186047     57\n",
+      "9        Raúl          Fulham      FWD  32.322485     55\n",
+      "10     Wilson          Fulham      MID  45.691145     52\n",
+      "Total Team Cost: 737\n",
+      "Total Team Index 436.20678576523505\n"
      ]
     }
    ],
