--- a/Models/Notebooks/Model_2.ipynb
+++ b/Models/Notebooks/Model_2.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,12 +28,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Enter current gameweek \n",
-    "gameweek = 16"
+    "gameweek = 20"
    ]
   },
   {
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
     "# Choose important columns\n",
     "columns = [\n",
     "    'Player ID', 'Name', 'Last_Name', 'Team', 'Position', 'Cost_Today',\n",
-    "    'GW Points', 'Form', 'Gameweek'\n",
+    "    'GW Points', 'Form', 'Gameweek', 'Avail'\n",
     "]\n",
     "\n",
     "final_data = final_data[columns]"
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
     "\n",
     "# Map difficulty for NGWs (next gameweeks) using Team and Position\n",
     "for i in range(1, 6):  # NGW1 to NGW5\n",
-    "    data[f'NGW{i}'] = data.apply(lambda row: mapping.get((row.iloc[8 + i], row.iloc[4]), None), axis=1)\n",
+    "    data[f'NGW{i}'] = data.apply(lambda row: mapping.get((row.iloc[9 + i], row.iloc[4]), None), axis=1)\n",
     "\n",
     "# Loop to create FDI_1 to FDI_5, summing up the values from F_1 to F_i\n",
     "for i in range(1, 6):\n",
@@ -182,12 +182,12 @@
     "\n",
     "# Calculate accumulated FD_index for up to next 5 gameweeks\n",
     "for i in range(1, 6):\n",
-    "    data[f'FDI_{i}'] = round(data.iloc[:, 7] / data.iloc[:, 18 + i], 4)"
+    "    data[f'FDI_{i}'] = round(data.iloc[:, 7] / data.iloc[:, 19 + i], 4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,27 +234,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "             Name               Team Position  FD_Index  Price\n",
-      "0            Raya            Arsenal       GK    2.0000     56\n",
-      "1          Saliba            Arsenal      DEF    3.8750     62\n",
-      "2           Iwobi             Fulham      MID    3.0000     57\n",
-      "3         M.Salah          Liverpool      MID    3.1667    134\n",
-      "4            Isak          Newcastle      FWD    3.8750     86\n",
-      "5     Gibbs-White  Nottingham Forest      MID    3.0000     63\n",
-      "6            Wood  Nottingham Forest      FWD    2.6250     66\n",
-      "7        J.Timber            Arsenal      DEF    2.8750     57\n",
-      "8   Strand Larsen             Wolves      FWD    2.1250     57\n",
-      "9          Schade          Brentford      MID    3.0833     51\n",
-      "10      Cucurella            Chelsea      DEF    2.7500     51\n",
-      "Total Team Cost: 740\n",
-      "Total Team Index 32.375\n"
+      "        Name            Team Position  FD_Index  Price\n",
+      "0   Pickford         Everton       GK     2.625     50\n",
+      "1       Raúl          Fulham      FWD     3.000     56\n",
+      "2     Wilson          Fulham      MID     2.875     52\n",
+      "3      Foden        Man City      MID     3.125     92\n",
+      "4    Haaland        Man City      FWD     2.875    148\n",
+      "5       Burn       Newcastle      DEF     2.000     44\n",
+      "6       Hall       Newcastle      DEF     2.700     48\n",
+      "7       Isak       Newcastle      FWD     3.250     92\n",
+      "8      Sávio        Man City      MID     3.875     64\n",
+      "9     Mbeumo       Brentford      MID     3.875     77\n",
+      "10  Chalobah  Crystal Palace      DEF     2.000     44\n",
+      "Total Team Cost: 767\n",
+      "Total Team Index 32.2\n"
      ]
     }
    ],
