--- a/Analysis/Improved_FD_points.ipynb
+++ b/Analysis/Improved_FD_points.ipynb
@@ -685,7 +685,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "FPL",
    "language": "python",
    "name": "python3"
   },
