--- a/Analysis/Improved_FD_points.ipynb
+++ b/Analysis/Improved_FD_points.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
     "week = 1\n",
     "\n",
     "# Current gameweek \n",
-    "gameweek = 3"
+    "gameweek = 8"
    ]
   },
   {
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,9 +137,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\thoma\\AppData\\Local\\Temp\\ipykernel_12484\\4188682127.py:13: FutureWarning: The behavior of Series.replace (and DataFrame.replace) with CategoricalDtype is deprecated. In a future version, replace will only be used for cases that preserve the categories. To change the categories, use ser.cat.rename_categories instead.\n",
+      "  data['Difficulty'] = data['Difficulty'].replace(1, 2)\n",
+      "C:\\Users\\thoma\\AppData\\Local\\Temp\\ipykernel_12484\\4188682127.py:13: FutureWarning: The behavior of Series.replace (and DataFrame.replace) with CategoricalDtype is deprecated. In a future version, replace will only be used for cases that preserve the categories. To change the categories, use ser.cat.rename_categories instead.\n",
+      "  data['Difficulty'] = data['Difficulty'].replace(1, 2)\n",
+      "C:\\Users\\thoma\\AppData\\Local\\Temp\\ipykernel_12484\\4188682127.py:13: FutureWarning: The behavior of Series.replace (and DataFrame.replace) with CategoricalDtype is deprecated. In a future version, replace will only be used for cases that preserve the categories. To change the categories, use ser.cat.rename_categories instead.\n",
+      "  data['Difficulty'] = data['Difficulty'].replace(1, 2)\n",
+      "C:\\Users\\thoma\\AppData\\Local\\Temp\\ipykernel_12484\\4188682127.py:13: FutureWarning: The behavior of Series.replace (and DataFrame.replace) with CategoricalDtype is deprecated. In a future version, replace will only be used for cases that preserve the categories. To change the categories, use ser.cat.rename_categories instead.\n",
+      "  data['Difficulty'] = data['Difficulty'].replace(1, 2)\n"
+     ]
+    }
+   ],
    "source": [
     "# Filter and sort players by position and points\n",
     "def filter_and_sort(data, positions, points_column='GW Points'):\n",
@@ -195,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -230,243 +245,120 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>ARS (A)</td>\n",
-       "      <td>-1.133033</td>\n",
-       "      <td>0.00</td>\n",
+       "      <td>-0.708890</td>\n",
+       "      <td>1.44</td>\n",
        "      <td>GK</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35</th>\n",
-       "      <td>TOT (H)</td>\n",
-       "      <td>-0.786390</td>\n",
-       "      <td>1.20</td>\n",
-       "      <td>GK</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>ARS (A)</td>\n",
-       "      <td>-1.133033</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>DEF</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>EVE (A)</td>\n",
-       "      <td>-0.689817</td>\n",
-       "      <td>1.83</td>\n",
-       "      <td>FWD</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>BUR (A)</td>\n",
-       "      <td>-0.728616</td>\n",
-       "      <td>1.40</td>\n",
-       "      <td>DEF</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>CHE (H)</td>\n",
-       "      <td>-0.844164</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>DEF</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>EVE (A)</td>\n",
-       "      <td>-0.916381</td>\n",
-       "      <td>0.75</td>\n",
-       "      <td>DEF</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>BUR (A)</td>\n",
-       "      <td>-0.579059</td>\n",
-       "      <td>2.17</td>\n",
-       "      <td>FWD</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>BRE (A)</td>\n",
-       "      <td>-0.700893</td>\n",
-       "      <td>1.80</td>\n",
-       "      <td>FWD</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>LIV (A)</td>\n",
-       "      <td>-0.699729</td>\n",
-       "      <td>1.50</td>\n",
-       "      <td>DEF</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>BOU (A)</td>\n",
-       "      <td>-0.745196</td>\n",
-       "      <td>1.67</td>\n",
-       "      <td>FWD</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>LEE (A)</td>\n",
-       "      <td>-0.574024</td>\n",
-       "      <td>2.18</td>\n",
-       "      <td>FWD</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>MCI (H)</td>\n",
-       "      <td>-0.817903</td>\n",
-       "      <td>1.09</td>\n",
-       "      <td>DEF</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35</th>\n",
-       "      <td>TOT (H)</td>\n",
-       "      <td>-0.786390</td>\n",
-       "      <td>1.20</td>\n",
-       "      <td>DEF</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>ARS (A)</td>\n",
-       "      <td>-0.634438</td>\n",
-       "      <td>2.00</td>\n",
-       "      <td>FWD</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>ARS (A)</td>\n",
-       "      <td>-0.634438</td>\n",
-       "      <td>2.00</td>\n",
-       "      <td>MID</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35</th>\n",
-       "      <td>TOT (H)</td>\n",
-       "      <td>-0.717507</td>\n",
-       "      <td>1.75</td>\n",
-       "      <td>MID</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>BOU (A)</td>\n",
-       "      <td>-0.745196</td>\n",
-       "      <td>1.67</td>\n",
-       "      <td>MID</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>BRE (A)</td>\n",
-       "      <td>-0.700893</td>\n",
-       "      <td>1.80</td>\n",
-       "      <td>MID</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>BUR (A)</td>\n",
-       "      <td>-0.579059</td>\n",
-       "      <td>2.17</td>\n",
-       "      <td>MID</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>CHE (A)</td>\n",
-       "      <td>-0.671357</td>\n",
-       "      <td>1.89</td>\n",
-       "      <td>MID</td>\n",
+       "      <td>-0.476338</td>\n",
+       "      <td>2.43</td>\n",
+       "      <td>FWD</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>EVE (A)</td>\n",
-       "      <td>-0.689817</td>\n",
-       "      <td>1.83</td>\n",
-       "      <td>MID</td>\n",
+       "      <th>10</th>\n",
+       "      <td>BUR (A)</td>\n",
+       "      <td>-0.375489</td>\n",
+       "      <td>2.74</td>\n",
+       "      <td>FWD</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>LEE (A)</td>\n",
-       "      <td>-0.574024</td>\n",
-       "      <td>2.18</td>\n",
-       "      <td>MID</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>NEW (A)</td>\n",
-       "      <td>-0.771946</td>\n",
-       "      <td>1.25</td>\n",
-       "      <td>DEF</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>NEW (A)</td>\n",
-       "      <td>-0.771946</td>\n",
-       "      <td>1.25</td>\n",
+       "      <th>32</th>\n",
+       "      <td>SUN (A)</td>\n",
+       "      <td>-0.509693</td>\n",
+       "      <td>2.10</td>\n",
        "      <td>GK</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>BOU (A)</td>\n",
+       "      <td>-0.307013</td>\n",
+       "      <td>2.95</td>\n",
+       "      <td>FWD</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>BOU (A)</td>\n",
+       "      <td>0.041101</td>\n",
+       "      <td>3.89</td>\n",
+       "      <td>DEF</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>MUN (H)</td>\n",
+       "      <td>0.304567</td>\n",
+       "      <td>4.83</td>\n",
+       "      <td>MID</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>EVE (H)</td>\n",
+       "      <td>0.277375</td>\n",
+       "      <td>4.67</td>\n",
+       "      <td>DEF</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>SUN (H)</td>\n",
+       "      <td>0.293742</td>\n",
+       "      <td>4.80</td>\n",
+       "      <td>MID</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>WOL (H)</td>\n",
+       "      <td>0.899742</td>\n",
+       "      <td>6.70</td>\n",
+       "      <td>DEF</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>160 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "   Opponent   z_score  Av_GW_Points Position Difficulty\n",
-       "0   ARS (A) -1.133033          0.00       GK          5\n",
-       "35  TOT (H) -0.786390          1.20       GK          5\n",
-       "0   ARS (A) -1.133033          0.00      DEF          5\n",
-       "16  EVE (A) -0.689817          1.83      FWD          5\n",
-       "10  BUR (A) -0.728616          1.40      DEF          5\n",
-       "13  CHE (H) -0.844164          1.00      DEF          5\n",
-       "16  EVE (A) -0.916381          0.75      DEF          5\n",
-       "10  BUR (A) -0.579059          2.17      FWD          5\n",
-       "8   BRE (A) -0.700893          1.80      FWD          5\n",
-       "22  LIV (A) -0.699729          1.50      DEF          5\n",
-       "6   BOU (A) -0.745196          1.67      FWD          5\n",
-       "20  LEE (A) -0.574024          2.18      FWD          5\n",
-       "25  MCI (H) -0.817903          1.09      DEF          5\n",
-       "35  TOT (H) -0.786390          1.20      DEF          5\n",
-       "0   ARS (A) -0.634438          2.00      FWD          5\n",
-       "0   ARS (A) -0.634438          2.00      MID          5\n",
-       "35  TOT (H) -0.717507          1.75      MID          5\n",
-       "6   BOU (A) -0.745196          1.67      MID          5\n",
-       "8   BRE (A) -0.700893          1.80      MID          5\n",
-       "10  BUR (A) -0.579059          2.17      MID          5\n",
-       "12  CHE (A) -0.671357          1.89      MID          5\n",
-       "16  EVE (A) -0.689817          1.83      MID          5\n",
-       "20  LEE (A) -0.574024          2.18      MID          5\n",
-       "28  NEW (A) -0.771946          1.25      DEF          5\n",
-       "28  NEW (A) -0.771946          1.25       GK          5"
+       "0   ARS (A) -0.708890          1.44       GK          5\n",
+       "12  CHE (A) -0.476338          2.43      FWD          5\n",
+       "10  BUR (A) -0.375489          2.74      FWD          5\n",
+       "32  SUN (A) -0.509693          2.10       GK          5\n",
+       "6   BOU (A) -0.307013          2.95      FWD          5\n",
+       "..      ...       ...           ...      ...        ...\n",
+       "6   BOU (A)  0.041101          3.89      DEF          2\n",
+       "27  MUN (H)  0.304567          4.83      MID          2\n",
+       "17  EVE (H)  0.277375          4.67      DEF          2\n",
+       "33  SUN (H)  0.293742          4.80      MID          2\n",
+       "39  WOL (H)  0.899742          6.70      DEF          2\n",
+       "\n",
+       "[160 rows x 5 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "FD_points.sort_values(by= 'Difficulty').head(25)"
+    "FD_points.sort_values(by= 'Difficulty')"
    ]
   }
  ],
