--- a/Analysis/Improved_FD_xG.ipynb
+++ b/Analysis/Improved_FD_xG.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,18 +211,18 @@
     "    \"Brentford\": \"BRE (A)\",\n",
     "    \"Brighton\": \"BHA (A)\",\n",
     "    \"Bournemouth\": \"BOU (A)\",\n",
+    "    \"Burnley\": \"BUR (A)\",\n",
     "    \"Chelsea\": \"CHE (A)\",\n",
     "    \"Crystal Palace\": \"CRY (A)\",\n",
     "    \"Everton\": \"EVE (A)\",\n",
     "    \"Fulham\": \"FUL (A)\",\n",
-    "    \"Ipswich Town\": \"IPS (A)\",\n",
-    "    \"Leicester City\": \"LEI (A)\",\n",
+    "    \"Leeds United\": \"LEE (A)\",\n",
     "    \"Liverpool\": \"LIV (A)\",\n",
     "    \"Manchester City\": \"MCI (A)\",\n",
     "    \"Manchester Utd\": \"MUN (A)\",\n",
     "    \"Newcastle Utd\": \"NEW (A)\",\n",
     "    \"Nott'ham Forest\": \"NFO (A)\",\n",
-    "    \"Southampton\": \"SOU (A)\",\n",
+    "    \"Sunderland\": \"SUN (A)\",\n",
     "    \"Tottenham\": \"TOT (A)\",\n",
     "    \"West Ham\": \"WHU (A)\",\n",
     "    \"Wolves\": \"WOL (A)\"\n",
@@ -233,20 +233,20 @@
     "    \"Arsenal\": \"ARS (H)\",\n",
     "    \"Aston Villa\": \"AVL (H)\",\n",
     "    \"Brentford\": \"BRE (H)\",\n",
-    "    \"Brighton\": \"BHA (H)\",  # Brighton & Hove Albion\n",
+    "    \"Brighton\": \"BHA (H)\",\n",
     "    \"Bournemouth\": \"BOU (H)\",\n",
+    "    \"Burnley\": \"BUR (H)\",\n",
     "    \"Chelsea\": \"CHE (H)\",\n",
     "    \"Crystal Palace\": \"CRY (H)\",\n",
     "    \"Everton\": \"EVE (H)\",\n",
     "    \"Fulham\": \"FUL (H)\",\n",
-    "    \"Ipswich Town\": \"IPS (H)\",\n",
-    "    \"Leicester City\": \"LEI (H)\",\n",
+    "    \"Leeds United\": \"LEE (H)\",\n",
     "    \"Liverpool\": \"LIV (H)\",\n",
     "    \"Manchester City\": \"MCI (H)\",\n",
     "    \"Manchester Utd\": \"MUN (H)\",\n",
     "    \"Newcastle Utd\": \"NEW (H)\",\n",
     "    \"Nott'ham Forest\": \"NFO (H)\",\n",
-    "    \"Southampton\": \"SOU (H)\",\n",
+    "    \"Sunderland\": \"SUN (H)\",\n",
     "    \"Tottenham\": \"TOT (H)\",\n",
     "    \"West Ham\": \"WHU (H)\",\n",
     "    \"Wolves\": \"WOL (H)\"\n",
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,11 +313,20 @@
     "# Rename columns\n",
     "FD_xG.rename(columns = {'Team': 'Opponent'}, inplace = True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "FD_xG.to_csv(r'C:\\Users\\thoma\\OneDrive\\Documents\\test.csv')"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "FPL",
    "language": "python",
    "name": "python3"
   },
